[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 24.0
color = Color( 0, 0, 0, 0.356863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_top = 8.0
margin_right = 64.0
margin_bottom = 24.0
text = "Level: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="."]
margin_left = 80.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 24.0
text = "Gold:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpLabel" type="Label" parent="."]
margin_left = 160.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 24.0
text = "Exp:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepLabel" type="Label" parent="."]
margin_left = 240.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 24.0
text = "Step:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
